--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/detailArea.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/detailArea.xhtml
@@ -131,7 +131,10 @@
                             <f:facet name="header">
                                 <h:outputText value="Name"/>
                             </f:facet>
-                            <h:outputText id="uobtnam" value="#{ticker.namePlusSymbol}"/>
+                            <p:commandLink process="@this" actionListener="#{citidemo.showLink(ticker.namePlusSymbol)}"
+                                           update=":ceForm:inputArea">
+                                <h:outputText id="uobtnam" value="#{ticker.namePlusSymbol}"/>
+                            </p:commandLink>
                         </p:column>
 
                         <p:column style="width:13%;"
