--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p1.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p1.xhtml
@@ -37,7 +37,7 @@
                     <div class="EmptyBox50"></div>
                     <p:commandButton styleClass="Fs16 citibutton" style="float: right;"
                                    id="demonextbtn1" value="Next"
-                                   update=":demoForm:inputArea, :demoForm:progressArea"
+                                   update=":ceForm:inputArea, :ceForm:progressArea"
                                    actionListener="#{citidemo.pagemanager.nextPage}">
                     </p:commandButton>
                 </div>
