--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p2.xhtml
@@ -41,14 +41,14 @@
                     <p:commandButton id="dpreviousbtn2"
                                    styleClass="Fs16 citibutton"
                                    value="Previous"
-                                   update=":demoForm:inputArea, :demoForm:progressArea"
+                                   update=":ceForm:inputArea, :ceForm:progressArea"
                                    immediate="true"
                                    actionListener="#{citidemo.pagemanager.prevPage}">
                     </p:commandButton>
                     <p:commandButton id="dnextbtn2"
                                    styleClass="Fs16 citibutton"
                                    value="Next"
-                                   update=":demoForm:inputArea, :demoForm:progressArea"
+                                   update=":ceForm:inputArea, :ceForm:progressArea"
                                    actionListener="#{citidemo.pagemanager.nextPage}">
                     </p:commandButton>
                 </div>
