Prashant 06/06/2017 - Citi Demo

--- a/Invessence/modules/web/src/main/webapp/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/index.xhtml
@@ -22,14 +22,14 @@
 
                         <div class="EmptyBox20"></div>
 
-                        <p:commandButton styleClass="getStartedBtn Fs20" value="Get Started"
-                                         actionListener="#{sessionControl.indexGetStarted}"/>
+                        <p:button styleClass="getStartedBtn Fs20" value="Get Started"
+                                         outcome="/getstarted.xhtml"/>
 
                         <div class="EmptyBox10"></div>
                         <div class="Seperator"></div>
                         <div class="EmptyBox10"></div>
-                        <p:commandButton styleClass="loginStartedBtn Fs16" value="Login"
-                                         actionListener="#{sessionControl.indexLogin}"/>
+                        <p:button styleClass="loginStartedBtn Fs16"  value="Login"
+                                  outcome="/login.xhtml"/>
                         <!--
                             <p:button  value="Register" styleClass="Fs16 OrangeButton" href="/signup.xhtml"/>
                         -->
