--- a/Invessence/modules/web/src/main/webapp/watson.xhtml
+++ b/Invessence/modules/web/src/main/webapp/watson.xhtml
@@ -22,14 +22,14 @@
 
                         <div class="EmptyBox20"></div>
 
-                        <p:commandButton styleClass="getStartedBtn Fs20" value="Get Started"
-                                         actionListener="#{sessionControl.watsonDemo}"/>
+                        <p:button styleClass="getStartedBtn Fs20" value="Get Started"
+                                         outcome="/pages/consumer/citi/demo/demo.xhtml"/>
 
                         <div class="EmptyBox10"></div>
                         <div class="Seperator"></div>
                         <div class="EmptyBox10"></div>
-                        <p:commandButton styleClass="loginStartedBtn Fs16" value="Login"
-                                         actionListener="#{sessionControl.indexLogin}"/>
+                        <p:button styleClass="loginStartedBtn Fs16" value="Login"
+                                         outcome="/pages/consumer/citi/demo/login.xhtml"/>
                         <!--
                             <p:button  value="Register" styleClass="Fs16 OrangeButton" href="/signup.xhtml"/>
                         -->
