--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/security.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/security.xhtml
@@ -6,7 +6,9 @@
 
         <div id="layout-portlets-cover">
             <div class="EmptyBox50"></div>
+            <p:scrollPanel mode="native" style="width: 100%; height: 400px">
                 <ui:include src="/pages/consumer/citi/demo/tickerdata.html"/>
+            </p:scrollPanel>
 
 
             <div class="customfooter">
