Checked in 07/06/2017  UI Changes

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/demo.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/demo.xhtml
@@ -20,7 +20,7 @@
 
             </div>
         </div>
-        <div style="width: 100%; height: 100vh; background: #e9e9e9;">
+        <div style="width: 100%; height: 100%; background: #e9e9e9; display: table;">
             <h:outputScript name="js/invCharts.js"
                             library="#{uiLayout.webProfile.cssdir}"/>
             <h:outputScript name="js/uobHighCharts.js"
