--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p2.xhtml
@@ -39,14 +39,14 @@
                     </div>
                     <div class="EmptyBox50"></div>
                     <p:commandButton id="dpreviousbtn2"
-                                   styleClass="Fs16 citibutton"
+                                   styleClass="Fs16 citibutton left"
                                    value="Previous"
                                    update=":ceForm:inputArea, :ceForm:progressArea"
                                    immediate="true"
                                    actionListener="#{citidemo.pagemanager.prevPage}">
                     </p:commandButton>
                     <p:commandButton id="dnextbtn2"
-                                   styleClass="Fs16 citibutton"
+                                   styleClass="Fs16 citibutton right"
                                    value="Next"
                                    update=":ceForm:inputArea, :ceForm:progressArea"
                                    actionListener="#{citidemo.pagemanager.nextPage}">
