--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/security.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/security.xhtml
@@ -5,8 +5,8 @@
                 xmlns:p="http://primefaces.org/ui">
 
         <div id="layout-portlets-cover">
-            <div class="EmptyBox50"></div>
-            <p:scrollPanel mode="native" style="width: 100%; height: 400px">
+            <div class="EmptyBox10"></div>
+            <p:scrollPanel mode="native" style="width: 100%; height: 400px; padding-bottom: 100px;">
                 <ui:include src="/pages/consumer/citi/demo/tickerdata.html"/>
             </p:scrollPanel>
 
