Prashant 06/07/2017 - Citi Demo

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/detailArea.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/detailArea.xhtml
@@ -131,7 +131,7 @@
                             <f:facet name="header">
                                 <h:outputText value="Name"/>
                             </f:facet>
-                            <p:commandLink process="@this" actionListener="#{citidemo.showLink(ticker.namePlusSymbol)}"
+                            <p:commandLink process="@this" actionListener="#{citidemo.showLink(ticker.isin)}"
                                            update=":ceForm:inputArea">
                                 <h:outputText id="uobtnam" value="#{ticker.namePlusSymbol}"/>
                             </p:commandLink>
