--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/demo.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/demo.xhtml
@@ -73,7 +73,7 @@
                         </div>
                     </ui:fragment>
                     <ui:fragment rendered="#{citidemo.pagemanager.page == 3}">
-                        <div class="step3 fixedHeightLP">
+                        <div class="step3 fixedHeightLP" style="height:440px !important;">
                             <ui:include src="/pages/consumer/citi/demo/security.xhtml"/>
                         </div>
                     </ui:fragment>
