Abhang checked in 06/08/2017 CITI Demo

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/demo.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/demo.xhtml
@@ -6,6 +6,7 @@
                 template="/template/common/simple.xhtml">
 
     <f:metadata>
+        <f:event type="preRenderView" listener="#{watsonBean.preRenderLinkedInCallBack}" />
         <f:event type="preRenderView" listener="#{citidemo.preRender}"/>
     </f:metadata>
 
