--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/detailArea.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/detailArea.xhtml
@@ -51,13 +51,8 @@
 
             <p:inputText type="hidden" id="idWatsonURL" styleClass="idWatsonUrlClass"
                          value="#{citidemo.getWatsonURL()}"/>
-            <div class="Container100 MarTop20">
-                <div class="Fs30 Fleft summaryHeader mainHeaderUOB RPHeadings1"
-                     style="cursor: pointer;">Summary
-                </div>
-                <div class="Fs30 Fleft detailHeader mainHeaderUOB RPHeadings2"
-                     style="cursor: pointer;">Details
-                </div>
+            <div class="Container100 MarTop20 customclass">
+
 
                 <div class="Wid40 Fright IRERBlock">
                     <div class="Wid40 Fright ReturnValuePanel">
