--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p3.xhtml
@@ -10,9 +10,19 @@
              style="padding: 50px 0">
             <div class="Container90 Fnone MarAuto TexAlCenter">
 
-                <h2 class="CitiDemotitle">
+                <h2 class="CitiDemotitle1">
                     Review
                 </h2>
+
+                <div class="Fs30 Fleft summaryHeader mainHeaderUOB RPHeadings1"
+                     style="cursor: pointer;">Summary
+                </div>
+                <div class="Fs30 Fleft detailHeader mainHeaderUOB RPHeadings2"
+                     style="cursor: pointer;">Details
+                </div>
+
+
+
                 <div class="EmptyBox20"></div>
 
                 <div class="Wid30 Fleft LeftPanel">
@@ -65,6 +75,17 @@
         <div class="EmptyBox10"></div>
 
 
+
+
+    </div>
+
+    <div class="customfooter">
+        <p:commandButton
+                         styleClass="Fs16 citibutton" style="float: left;"
+                         value="Start Over"
+                         icon="ui-icon-refresh"
+                         >
+        </p:commandButton>
     </div>
 
     <script>
