code check in by Sagar for investment value

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/detailArea.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/detailArea.xhtml
@@ -50,7 +50,8 @@
             </script>
 
             <p:inputText type="hidden" id="idWatsonURL" styleClass="idWatsonUrlClass"
-                         value="#{citidemo.getWatsonURL()}"/>
+                         value="#{citidemo.watsonURL}"/>
+
             <div class="Container100 MarTop20 customclass">
 
 
