--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p3.xhtml
@@ -81,7 +81,7 @@
 
     <div class="customfooter">
         <p:commandButton
-                         styleClass="Fs16 citibutton" style="float: left;"
+                         styleClass="Fs16 citisubmitbutton" style="float: left;"
                          value="Start Over"
                          icon="ui-icon-refresh"
                          >
