Checked in 9th June

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p1.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p1.xhtml
@@ -21,9 +21,9 @@
                     <div class="PortfolioCreationFields">
                 <span class="mobileFullWidth">
 
-                    <h:outputText id="demoobjectiveText" value="The objective for this portfolio is " styleClass="formFS"/>
+                    <h:outputText id="demoobjectiveText" value="The objective for this portfolio is " styleClass="formFS "/>
                     </span>
-                        <p:selectOneMenu id="q1" styleClass="TCM-UI-Dropdown dropdownInputFullWidth portfolioCreationDD"
+                        <p:selectOneMenu id="q1" styleClass="TCM-UI-Dropdown dropdownInputFullWidth portfolioCreationDD citiinput"
                                          required="true" requiredMessage="Please choose investment strategy"
                                          value="#{citidemo.goal}">
 
