--- a/Invessence/modules/web/src/main/webapp/watson.xhtml
+++ b/Invessence/modules/web/src/main/webapp/watson.xhtml
@@ -9,6 +9,7 @@
     </f:metadata>
 
     <ui:define name="content">
+        <h:outputScript library="aggr" name="mx/mxCommon.js" />
         <div class="EmptyBox50"></div>
         <div id="layout-portlets-cover">
             <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
@@ -28,8 +29,9 @@
                         <div class="EmptyBox10"></div>
                         <div class="Seperator"></div>
                         <div class="EmptyBox10"></div>
-                        <p:button styleClass="loginStartedBtn Fs16" value="Login"
-                                         outcome="/pages/consumer/citi/demo/linkedInLogin.xhtml"/>
+                       <!-- <p:button styleClass="loginStartedBtn Fs16" value="Login"
+                                         outcome="/pages/consumer/citi/demo/linkedInLogin.xhtml" />-->
+                        <p:commandButton styleClass="loginStartedBtn Fs16" value="Login" actionListener="#{watsonBean.preRenderLinkedInWidget}"></p:commandButton>
                         <!--
                             <p:button  value="Register" styleClass="Fs16 OrangeButton" href="/signup.xhtml"/>
                         -->
