Checked in 09/06/2017 Final Changes

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/detailArea.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/detailArea.xhtml
@@ -68,7 +68,7 @@
                 <div class="Container50 donutChartTable">
                     <div class="EmptyBox20 donutChartTableEB"></div>
                     <p:dataTable styleClass="uob_graphTable" id="uobtablesummary"
-                                 value="#{citidemo.editableAsset}" var="assetList">
+                                 value="#{citidemo.editableAsset}" var="assetList" style="margin-left: 30px;">
 
                         <p:column
                                 style="width: 5%; background-color: #{assetList.color}; border:0px!important;">
