--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p3.xhtml
@@ -136,4 +136,32 @@
             });
         });
     </script>
+
+    <script>
+
+        $(function() {
+            $('.RPHeadings2').click( function() {
+                $(this).addClass('active');
+                $('.RPHeadings1').removeClass('active');
+
+
+
+
+            });
+        });
+    </script>
+
+    <script>
+
+        $(function() {
+            $('.RPHeadings1').click( function() {
+                $(this).addClass('active');
+                $('.RPHeadings2').removeClass('active');
+
+
+
+
+            });
+        });
+    </script>
 </ui:composition>
