--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p2.xhtml
@@ -26,7 +26,7 @@
                     </span>
 
                         <p:inputNumber id="initialAmt"
-                                       styleClass="invInputText input_investwid1 amountBRmobileSupport mobileFullWidthinput"
+                                       styleClass="invInputText input_investwid1 amountBRmobileSupport mobileFullWidthinput citiinput"
                                        value="#{citidemo.initialInvestment}"
                                        maxlength="11" symbol="$"
                                        decimalPlaces="0"
