Abhang checked in 06/12/2017 CITI Demo

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p3.xhtml
@@ -106,7 +106,7 @@
 
             <p class="hood">
 
-Sagar
+                <h:outputText rendered="#{citidemo.profileAvailable}" value="#{watsonBean.summary}"></h:outputText>
             </p>
             <div class="EmptyBox10"></div>
 
