resposive Review page

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/p3.xhtml
@@ -10,7 +10,7 @@
 
         <div class="EmptyBox10"></div>
 
-        <div class="other-pages-box Container90 Responsive50 MarAuto Fnone TexAlCenter  MarTop10 BackgroundWhite"
+        <div class="other-pages-box Container90 MarAuto Fnone TexAlCenter  MarTop10 BackgroundWhite"
              style="padding: 50px 0">
             <div class="Container90 Fnone MarAuto TexAlCenter">
 
